<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_70"
    android:background="@drawable/buttonbar"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:orientation="horizontal"
    android:backgroundTint="@color/white">
    <TextView
        android:id="@+id/nourish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:layout_marginTop="@dimen/dp_0"
        android:gravity="center"
        android:layout_weight="1"
        android:drawableTop="@drawable/farm"
        android:text="@string/cultvation"
        android:textColor="@color/grey"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_0"
        android:layout_weight="1"
        android:textColor="@color/grey"
        android:drawableTop="@drawable/share"
        android:layout_height="@dimen/dp_65"
        android:text="@string/share"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/my"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_0"
        android:layout_weight="1"
        android:drawableTop="@drawable/my"
        android:textColor="@color/grey"
        android:layout_height="@dimen/dp_65"
        android:text="@string/my"
        android:textSize="20sp"
        android:gravity="center"/>

</LinearLayout>